# DEF-pyirstdmetrics

./: .env.serve  AGENTS.md  ASSETS.md  CLAUDE.md  Dockerfile.serve  NEXT_STEPS.md  PRD.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
.github/workflows/: eval-smoke.yml
benchmarks/: README.md
configs/: debug.toml  default.toml  paper.toml  ros2.toml
kernels/: README.md
launch/: irstd_metrics.launch.py
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2-integration.md  PRD-07-production.md  README.md
scripts/: bootstrap_env.sh  compare_reports.py  export_report.py  preflight.py  run_all_benchmarks.py  verify_assets.py
src/anima_pyirstdmetrics/: __init__.py  cli.py  config.py  dataset.py  evaluator.py  report.py  ros2_node.py  serve.py  types.py
tasks/: INDEX.md  PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0301.md  PRD-0302.md  PRD-0303.md  PRD-0401.md  PRD-0402.md  PRD-0403.md  PRD-0501.md  PRD-0502.md  PRD-0503.md  PRD-0601.md  PRD-0602.md  PRD-0603.md  PRD-0701.md  PRD-0702.md  PRD-0703.md  README.md
tests/: test_cli.py  test_config.py  test_dataset_pairs.py  test_evaluator_smoke.py  test_report.py  test_ros2_node.py  test_serve.py
